--- a/style.css
+++ b/style.css
@@ -27,6 +27,8 @@ nav {
   position: relative;
   z-index: 1000;
   max-width: 90%; /* Limit the max width of nav */
+  white-space: nowrap; /* Prevent text from wrapping */
+  overflow-x: auto; /* Allow horizontal scrolling if needed */
 }
 
 nav ul {
@@ -35,7 +37,7 @@ nav ul {
   padding: 0;
   display: flex;
   justify-content: center;
-  flex-wrap: wrap; /* Allow items to wrap */
+  flex-wrap: nowrap; /* Allow items to wrap */
 }
 
 nav ul li {
@@ -59,6 +61,12 @@ nav ul li a:hover {
   text-shadow: 0.2vh 0.2vh 0.4vh rgba(0, 0, 0, 0);
   transform: scale(1);
   transition: background-color 0.3s, transform 0.3s, color 0.3s; /* Add color transition */
+}
+
+@media (max-width: 768px) {
+  nav ul li a {
+    padding: 1vh 1vw; /* Adjust padding */
+  }
 }
 
 /* Page Title */
@@ -133,9 +141,9 @@ nav ul li a:hover {
 }
 
 .hero .description {
-  font-size: calc(0.9vw + 0.9vh);
-  top: 76%;
-  left: 71%;
+  font-size: calc(1vw + 1vh);
+  top: 90%;
+  left: 58%;
   transform: translate(-50%, -50%);
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 1); /* Text shadow */
 }
